--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,24 @@
 group 'org.codetaming.gwtauth0'
-version '1.0-SNAPSHOT'
+version = '0.1.0'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+repositories {
+    mavenCentral()
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.2.1'
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compileOnly 'com.google.gwt:gwt-user:2.8.0',
+            'com.google.gwt:gwt-dev:2.8.0'
 }
