--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,42 @@ dependencies {
     compileOnly 'com.google.gwt:gwt-dev:2.8.0'
     compile 'com.google.gwt.inject:gin:2.1.2'
 }
+
+task compileGwt(dependsOn: classes, type: JavaExec) {
+    ext.buildDir = "${project.buildDir}/gwt"
+    ext.extraDir = "${project.buildDir}/extra"
+
+    inputs.source sourceSets.main.java.srcDirs
+    inputs.dir sourceSets.main.output.resourcesDir
+    outputs.dir buildDir
+
+    doFirst {
+        file(buildDir).mkdirs()
+    }
+
+    main = 'com.google.gwt.dev.Compiler'
+
+    classpath {
+        [
+                sourceSets.main.java.srcDirs,           // Java source
+                sourceSets.main.output.resourcesDir,    // Generated resources
+                sourceSets.main.output.classesDir,      // Generated classes
+                sourceSets.main.compileClasspath,       // Deps
+        ]
+    }
+
+    args = [
+            'org.codetaming.gwt.auth0.GwtAuth0Client',
+            '-war', buildDir,
+            '-logLevel', 'ERROR',
+            '-localWorkers', '4',
+            '-compileReport',
+            '-extra', extraDir,
+            '-style', 'PRETTY',
+            '-optimize', '7' // 0=none, 9=max
+    ]
+
+    maxHeapSize = '512M'
+}
+
+jar.dependsOn compileGwt
